apps/servicex/servicex-gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: servicex-gateway
  namespace: servicex
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - servicex.cb-interview.com
      port:
        number: 8080
        name: http
        protocol: HTTP
      tls:
        httpsRedirect: true
