apps/servicex/servicex-authJWT.yml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: servicex-auth-policy
  namespace: servicex
spec:
  selector:
    matchLabels:
      app: servicex
  action: ALLOW
  rules:
  - from:
    - source:
        requestPrincipals: ["testing@secure.istio.io"]
  jwt:
    issuer: "testing@secure.istio.io"
    jwksUri: "https://raw.githubusercontent.com/istio/istio/release-1.20/security/tools/jwt/samples/jwks.json"
  forward:
  - requestHeaders:
    - name: X-JWT-PAYLOAD
      values: ["*"]
